--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
-                android:layout_height="75dp">
+                android:layout_height="75dp"
+    android:padding="7dp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="12dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/icon"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/optionTitle"
-        android:gravity="center_vertical"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:text="Text"
         android:textColor="#000000"
-        android:layout_toRightOf="@id/icon"/>
+        android:layout_toEndOf="@id/icon"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkbox"
-        android:layout_toRightOf="@id/optionTitle"/>
+        android:layout_toEndOf="@id/optionTitle"/>
 
 </RelativeLayout>
