--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,7 +8,9 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/icon"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:focusable="false"
+        android:clickable="false"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,12 +19,17 @@
         android:textSize="15sp"
         android:text="Text"
         android:textColor="#000000"
-        android:layout_toEndOf="@id/icon"/>
+        android:layout_toEndOf="@id/icon"
+        android:focusable="false"
+        android:clickable="false"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:id="@+id/checkbox"
-        android:layout_toEndOf="@id/optionTitle"/>
+        android:focusable="false"
+        android:clickable="false"/>
+
 
 </RelativeLayout>
